Closed Bug 906080 Opened 11 years ago Closed 11 years ago

Assert main thread in IsChromeOrXBL()

Categories

(Core :: XPConnect, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla26

People

(Reporter: nsm, Assigned: nsm)

Details

Attachments

(1 file)

As discussed with khuey.

Calling this from a binding running on a worker, will trip up the DEBUG_TOKEN assertion in nsJSPrincipal::get() down into the call tree, which is confusing. Make it clear what is going wrong if this function is being hit from workers. IIRC The solution is to add 'wantsQI': False to Bindings.conf.
4 space indent to comply with the rest of the file.
Attachment #791319 - Flags: review?(khuey)
Assignee: nobody → nsm.nikhil
https://hg.mozilla.org/mozilla-central/rev/780365615c6d
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: