Bug 906080 - Assert main thread in isChromeOrXBL(). r=khuey